--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <button onclick="soumettre()">Soumettre</button>
 
   <script>
-    const apiURL = "COLLE_ICI_URL_APPS_SCRIPT"; // ton URL Apps Script
+    const apiURL = "https://script.google.com/macros/s/AKfycbzgiZuaY4ZOI7AHDmluufeJKPLRe_fCtRVVaxH62wFFeSY57wtu1hzmPaRit_gaMyum/exec"; // ton URL Apps Script
     let currentRow = null; // pour stocker la ligne trouvée
 
     async function chercherEtudiant() {
