--- a/index.html
+++ b/index.html
@@ -21,13 +21,16 @@
   <div class="field"><label>Nom : </label><input type="text" id="nom"></div>
   <div class="field"><label>Téléphone 1 : </label><input type="text" id="tel1"></div>
   <div class="field"><label>Téléphone 2 : </label><input type="text" id="tel2"></div>
-  <div class="field"><label>Email : </label><input type="text" id="email"></div>
+<div class="field">
+  <label>Email : </label>
+  <input type="email" id="email" required>
+</div
   <div class="field"><label>Modifié le : </label><input type="text" id="modifie" readonly></div>
 
   <button onclick="soumettre()">Soumettre</button>
 
   <script>
-    const apiURL = "https://script.google.com/macros/s/AKfycbzV_twyW37Igd2K7Og-wN-lLXR1iuAV-tRIHjaWrarSK755CjOM3iB6tTv_956uc2T6/exec"; // ton URL Apps Script
+    const apiURL = "https://script.google.com/macros/s/AKfycbx8aH6rH6rBM68_JjSn-YxVjNcPOXHj_VuDg8QiXeskyaNhu91n_YmmIu2asKVc9fCi/exec"; // ton URL Apps Script
     let currentRow = null; // pour stocker la ligne trouvée
 
     async function chercherEtudiant() {
@@ -58,19 +61,22 @@
     return;
   }
 
+  const email = document.getElementById("email").value.trim();
+  if (!email) {
+    alert("L'email est obligatoire !");
+    return;
+  }
+
   const formData = new URLSearchParams();
   formData.append("row", currentRow);
   formData.append("Nom", document.getElementById("nom").value);
   formData.append("Tel1", document.getElementById("tel1").value);
   formData.append("Tel2", document.getElementById("tel2").value);
-  formData.append("Email", document.getElementById("email").value);
+  formData.append("Email", email);
 
-  const response = await fetch(apiURL, {
-    method: "POST",
-    body: formData
-  });
-
+  const response = await fetch(apiURL, { method: "POST", body: formData });
   const result = await response.json();
+
   if (result.status === "success") {
     alert("Modification enregistrée !");
     document.getElementById("modifie").value = new Date().toLocaleString();
@@ -78,6 +84,7 @@
     alert("Erreur lors de la mise à jour !");
   }
 }
+
 
   </script>
 </body>
