--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="field"><label>Téléphone 1 :</label><input type="text" id="tel1"></div>
     <div class="field"><label>Téléphone 2 :</label><input type="text" id="tel2"></div>
     <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
-    <div class="field"><label>Modifié le :</label><input type="text" id="modifie" readonly></div>
+    <div class="field"><label></label><input type="text" id="modifie" readonly></div>
 
     <button onclick="soumettre()">Soumettre</button>
 
