--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     
     <div class="field row">
-      <label for="cinInput">CIN :</label>
+      <label id="cinlbl" for="cinInput">CIN :</label>
       <input type="text" id="cinInput">
       <button onclick="chercherEtudiant()">Chercher</button>
   </div>
