--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <link href="logocnfcpp.png" rel="icon" type="image/x-icon" />
   <title>MAJ Coordonnées</title>
   <link rel="stylesheet" href="index.css">
 </head>
