--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div id="loader" style="display:none; text-align:center; margin-top:10px;">
+      <img src="loader.gif" alt="Chargement..." width="40">
+    </div>
   <div class="container">
     <h2>Mise à jour des coordonnées</h2>
     <div class="field row">
