--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   
   <div class="container">
     <h2>Mise à jour des coordonnées</h2>
-    <div id="loader" style="display:none; text-align:center; margin-top:10px;">
+    <div id="loader">
       <img src="loader.gif" alt="Chargement..." width="200">
     </div>
-    <div id="cinfail" style="display:none; text-align:center; margin-top:10px;">
-      <img src="failcin.png" alt="Chargement..." width="200">
+    <div id="cinfail">
+      <img src="failcin.png" alt="Chargement..." width="300">
     </div>
     <div class="field row">
       <label id="cinlbl" for="cinInput">CIN :</label>
