--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <img src="loader.gif" alt="Chargement..." width="200">
     </div>
     <div id="cinfail">
-      <img src="failcin.png" alt="Chargement..." width="300">
+      <img src="cinfail.png" alt="Chargement..." width="300">
     </div>
     <div class="field row">
       <label id="cinlbl" for="cinInput">CIN :</label>
