--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
  // 🔹 Clique sur l'image "cinfail" recharge la page
     document.getElementById("cinfail").onclick = () => {
       location.reload();
+      document.getElementById("cinInput").focus();
     };
   };
   function toggleFields(disabled) {
