--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="field"><label>Email <span style="color:red">*</span> :</label><input type="email" id="email" required></div>
     <div class="field"><label></label><input type="text" id="modifie" readonly></div>
     <button onclick="soumettre()">Soumettre</button>
-    <button onclick="getrecu()">Reçu d'inscription</button>
+    <button id="btnrecu" onclick="getrecu()">Reçu d'inscription</button>
     <div id="message" class="message"></div>
   </div>
   <script>
