--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     </div>
     <div id="cinfail">
       <img src="cinfail.png" alt="CIN introuvable ou erroné !" width="400">
+      <div class="field"><label>Nom :</label><input type="text" id="nomsignal"></div>
+      <button onclick="signaler()">Signaler erreur</button>
     </div>
     <div class="field row">
       <label id="cinlbl" for="cinInput">CIN :</label>
