--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     <div class="field row">
       <label id="cinlbl" for="cinInput">CIN :</label>
-      <input type="text" id="cinInput">
+      <input type="text" id="cinInput" inputmode="numeric" pattern="[0-9]*" placeholder="Entrer CIN">
       <button onclick="chercherEtudiant()">Chercher</button>
     </div>
     <div class="field"><label>Nom :</label><input type="text" id="nom"></div>
