--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     <div id="message" class="message"></div>
   </div>
   <script>
+    
+    window.addEventListener("load", function() {
+    const input = document.getElementById("cinInput");
+    input.focus();
+  });
+    
   const apiURL = "https://script.google.com/macros/s/AKfycbx8aH6rH6rBM68_JjSn-YxVjNcPOXHj_VuDg8QiXeskyaNhu91n_YmmIu2asKVc9fCi/exec"; 
   let currentRow = null; 
 
