--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="cinfail.png" alt="CIN introuvable ou erroné !" width="400">
       <div><label>Nom :</label><input type="text" id="nomsignal"></div>
       <button onclick="signaler()">Signaler erreur</button>
-      <button id="cinfailcncl">Annuler</button>
+      <button id="cinfailcncl">Retour</button>
       <div id="message-signalement" class="message"></div>
     </div>
     <div class="field row">
